hphp/test/zend/good/Zend/tests/traits/bug60145.php.expectf

Fatal error: Interfaces cannot use traits in %s/bug60145.php on line 8
